   * slow does not remove an attack anymore
   * slowed units see the damage they deal halved immediately
   * unit modifications now round toward original value instead of truncating
   * changed resilient trait bonus from +7hp to +10%+3hp
   * decreased strong trait hitpoints bonus from 2 to 1
   * added a fisher's clock to MP games to limit turn duration
 * graphics:
   * team color:
     * units can now have colors redefined to match team colors:
     * team color can be defined in the side tag with "team_rgb=r,g,b"
     * team color enabled for: Knight, Grand Knight
   * new title screen and logo
   * changed the storm trident attack icon from fireball to lightingbolt
   * new attack icon for the fireball
   * portraits:
     * new Li'sar, Drake Burner, Drake Fighter, Drake Glider, Elvish Shaman,
       Ghoul, Mermaid Initiate, Merman Fighter, Merman Hunter, Naga Fighter,
       Orcish Assassin, Saurian Skirmisher
     * all Drake, Merman, Naga and Saurian upgrades now use level one portraits
     * Necrophage and Orcish Slayer upgrades now use level one portraits
     * Updated portraits for Haldric and Aethyr in TRoW
   * new unit images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep, most Drake units
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
     snow village (human & elven), underground village, mountains, hills, snow
     hills
   * bilinear interpolation of images (better interpolation at high zoom
     level)
   * new movement animation: elvish fighter
 * language and i18n:
   * added support for right-to-left languages (patch #470)
   * made the list of languages configurable via the locale WML
   * new manual: Chinese; updated manual: English, German, Swedish
   * updated man pages: Swedish
   * new translations: Hebrew, Esperanto, Portugese
   * updated translations: Afrikaans, British English, Chinese, Czech, French,