@@ -67,11 +67,12 @@ default=yes
 	sidebar_image="misc/rightside.png"
 	sidebar_image_bottom="misc/rightside-bottom.png"
 
-	moved_energy_image="misc/bar-energy-moved.png"
-	unmoved_energy_image="misc/bar-energy-unmoved.png"
-	partmoved_energy_image="misc/bar-energy-partmoved.png"
-	enemy_energy_image="misc/bar-energy-enemy.png"
-	ally_energy_image="misc/bar-energy-ally.png"
+	energy_image="misc/bar-energy.png"
+	moved_ball_image="misc/ball-moved.png"
+	unmoved_ball_image="misc/ball-unmoved.png"
+	partmoved_ball_image="misc/ball-partmoved.png"
+	enemy_ball_image="misc/ball-enemy.png"
+	ally_ball_image="misc/ball-ally.png"
 	flag_image="terrain/flag-1.png:150,terrain/flag-2.png:150"
 
 	cross_image="misc/cross.png"
